# camp-planner

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  wsgi.py
camp_planner/: __init__.py  api.py  cli.py  config.py  extensions.py  integration.py  schemas.py  version.py  views.py
camp_planner/auth/: __init__.py  callback.py  identity.py  permissions.py  proxy.py  scopes.py  standalone.py
camp_planner/models/: __init__.py  activity.py  audit.py  auth.py  camp.py  common.py  google.py  material.py  org.py  slot.py
camp_planner/services/: __init__.py  activities.py  audit.py  camps.py  errors.py  google_client.py  google_sync.py  loaders.py  materials.py  serialize.py  slots.py  taxonomy.py  timeline.py  todos.py
camp_planner/static/css/: activities-overview.css  activity-detail.css  components.css  content.css  google-sync.css  landing.css  materials.css  (+4 more)
camp_planner/templates/: _macros.html  activities_overview.html  activity_detail.html  camp_detail.html  camp_edit.html  camp_form.html  camp_timeline.html  index.html  materials_overview.html  todos_overview.html
docs/: DEPLOYMENT.md  google_calendar_setup.md
docs/mockups/: README.md  data.js  mock-gridstack.html  mock-vis-timeline.html
migrations/: script.py.mako
migrations/versions/: a1b2c3d4e5f6_slot_override_name.py  b2c3d4e5f6a7_audit_merge_action.py  c3d4e5f6a7b8_org_assignments_and_material_acquisition.py  c3d4e5f6a7b8_todo_org_assignments.py  db22112590d1_initial_schema.py
tests/: conftest.py  test_api.py  test_google_sync.py  test_proxy_auth.py  test_timeline.py  test_views.py
(+21 files in other folders)
