[project]
name = "camp-planner"
version = "0.1.0"
description = "Planning tool for summer camps — Flask + SQLAlchemy, supports SQLite / PostgreSQL / MySQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-wtf>=1.2",          # CSRF protection for standalone-mode forms
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.13.4",        # API request/response schemas (validation + OpenAPI)
    "spectree>=2.0.1",         # OpenAPI spec + Swagger UI from the pydantic schemas
    # Two-way Google Calendar sync (see docs/google_calendar_setup.md). Service-account
    # auth only — no end-user OAuth, so google-auth-oauthlib is not needed. Imported
    # lazily (services/google_client.py) so it only loads when sync is configured.
    "google-api-python-client>=2",
    "google-auth>=2",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["PyMySQL>=1.1"]
# Production WSGI server (see docs/DEPLOYMENT.md). Not needed for dev (`flask run`),
# tests, or embedded mode, where the host app brings its own server.
prod = ["gunicorn>=23"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camp_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
